      - Logging: log errors too.
      - Downloading package archives: include only those codename/component
        pairs to long descriptions which belong to a selected base
        download URI.
      - Updating release and index data: use i18n/Index for downloading package
        description localizations (Closes: #547948).
    - cache:
      - Honor 'cupt::cache::limit-releases::*' options.
    - hashsums:
      - Reduce CPU overhead of the calculating hashes of short strings.
    - 'fatal', 'warn', 'debug', 'simulate': are deprecated now.
  * doc:
    - man:
      - [Jonathan Nieder] Split off a cupt.conf(5) page from cupt(1).
        Thanks to A. Costa for the idea (Closes: #648012).
    - What was referred as 'candidate version' is really
      the 'preferred version'.

 -- Eugene V. Lyubimkin <jackyf@debian.org>  Thu, 22 Sep 2011 11:33:25 +0300

cupt (2.2.2) unstable; urgency=low

  * debian:
    - libcupt2-0.postinst:
      - Don't copy APT GnuPG keyring here anymore. Since 2.1.x Cupt has its
        own directory for repository caches so no work is possible until
        the repository lists are generated first time, and at that time
        the keyring will be copied anyway.
  * lib:
    - cache:
      - Use 'apt-key exportall' in the 'copy the keyring' hack. Thanks to
        Jonathan Nieder for the report and the patch idea. (Closes: #646993)

 -- Eugene V. Lyubimkin <jackyf@debian.org>  Mon, 31 Oct 2011 21:40:46 +0200

cupt (2.2.1) unstable; urgency=low

  * console:
    - Managing packages:
      - Fixed the work of action override options inside the interactive
        prompt for new package expressions.
      - 'markauto', 'unmarkauto': reject not installed packages. Thanks to
        Karol Kozłowski for the report.
  * lib:
    - system/resolvers/native:
      - Made sure that if the package is auto-removed there are no other
        resolver reasons present. Thanks to Karol Kozłowski for the report.
        (Closes: #643798)
